--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -1,5 +1,4 @@
-# Sample workflow for building and deploying a Jekyll site located in the kanban folder
-name: Deploy Jekyll with GitHub Pages dependencies preinstalled
+name: Deploy React/TypeScript Project to GitHub Pages
 
 on:
   push:
@@ -19,31 +18,31 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      # Step 1: Checkout repository
       - name: Checkout
         uses: actions/checkout@v4
 
+      # Step 2: Set up Node.js for dependency installation and build
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '16' # Specify the Node.js version you need
+          node-version: '16' # Adjust Node.js version as needed
 
+      # Step 3: Install project dependencies
       - name: Install dependencies
         working-directory: ./kanban
         run: npm install
 
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
+      # Step 4: Build the project
+      - name: Build project
+        working-directory: ./kanban
+        run: npm run build
 
-      - name: Build with Jekyll
-        uses: actions/jekyll-build-pages@v1
-        with:
-          source: ./kanban
-          destination: ./kanban/_site
-
+      # Step 5: Upload the built site as an artifact
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./kanban/_site
+          path: ./kanban/build
 
   deploy:
     environment:
@@ -52,6 +51,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      # Deploy the built site to GitHub Pages
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
