--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '16' # Adjust Node.js version as needed
+          node-version: '20.18.0' # Use Node.js 20.18.0
 
       # Step 3: Install project dependencies
       - name: Install dependencies
